// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with a p tag and no items. 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-big-screen"
    >
      Expense
    </div>
    <div
      className="show-for-big-screen"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div>
      <span
        className="list-item list-item--message"
      >
        No expenses.
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-big-screen"
    >
      Expense
    </div>
    <div
      className="show-for-big-screen"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note="gum like"
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="credit"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
